Switch java version to 8