@@ -3,12 +3,12 @@ package cn.apisium.nekomaid;
 import com.corundumstudio.socketio.BroadcastAckCallback;
 import com.corundumstudio.socketio.BroadcastOperations;
 import com.corundumstudio.socketio.SocketIOClient;
-import org.bukkit.Bukkit;
 import org.bukkit.plugin.Plugin;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @SuppressWarnings({"unused", "UnusedReturnValue"})
 public final class Room {
@@ -23,40 +23,41 @@ public final class Room {
     }
 
     private BroadcastOperations getRoom() {
-        var room = NekoMaid.INSTANCE.server.getRoomOperations(roomName);
+        BroadcastOperations room = NekoMaid.INSTANCE.server.getRoomOperations(roomName);
         return room.getClients().isEmpty() ? null : room;
     }
 
     @Contract("_, _, _ -> this")
     public Room emit(String name, SocketIOClient excludedClient, Object... data) {
-        var room = getRoom();
+        BroadcastOperations room = getRoom();
         if (room != null) room.sendEvent(plugin + name, excludedClient, data);
         return this;
     }
 
     @Contract("_, _ -> this")
     public Room emit(String name, Object... data) {
-        var room = getRoom();
+        BroadcastOperations room = getRoom();
         if (room != null) room.sendEvent(plugin + name, data);
         return this;
     }
 
     @Contract("_, _, _ -> this")
     public Room emit(String name, Object data, BroadcastAckCallback<?> ackCallback) {
-        var room = getRoom();
+        BroadcastOperations room = getRoom();
         if (room != null) room.sendEvent(plugin + name, data, ackCallback);
         return this;
     }
 
     @Contract("_, _, _, _ -> this")
     public Room emit(String name, Object data, SocketIOClient excludedClient, BroadcastAckCallback<?> ackCallback) {
-        var room = getRoom();
+        BroadcastOperations room = getRoom();
         if (room != null) room.sendEvent(plugin + name, data, excludedClient, ackCallback);
         return this;
     }
 
     @NotNull
     public List<Client> getClients() {
-        return NekoMaid.INSTANCE.server.getRoomOperations(roomName).getClients().stream().map(it -> new Client(plugin, it)).toList();
+        return NekoMaid.INSTANCE.server.getRoomOperations(roomName).getClients().stream()
+                .map(it -> new Client(plugin, it)).collect(Collectors.toList());
     }
 }
