@@ -3,6 +3,7 @@ package cn.apisium.nekomaid.builtin;
 import cn.apisium.nekomaid.NekoMaid;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
@@ -13,10 +14,9 @@ class FilesManager {
     public FilesManager(NekoMaid main) {
         main.onWithAck(main, "files:fetch", String.class, path -> {
             try {
-                var p = Paths.get(".", path);
+                Path p = Paths.get(".", path);
                 if (!p.startsWith(root) || !Files.isDirectory(p) || Files.isHidden(p)) return null;
-                var dirs = new ArrayList<String>();
-                var files = new ArrayList<String>();
+                ArrayList<String> dirs = new ArrayList<>(), files = new ArrayList<>();
                 Files.list(p).forEach(it -> (Files.isDirectory(it) ? dirs : files).add(it.getFileName().toString()));
                 return new ArrayList[] { dirs, files };
             } catch (IOException e) {
@@ -24,22 +24,22 @@ class FilesManager {
             }
         }).onWithAck(main, "files:content", String.class, path -> {
             try {
-                var p = Paths.get(".", path);
+                Path p = Paths.get(".", path);
                 if (!p.startsWith(root) || Files.isHidden(p) || !Files.isReadable(p)) return 0;
                 if (!Files.isRegularFile(p)) return 1;
                 if (Files.size(p) > MAX_SIZE) return 2;
-                return Files.readString(p);
+                return new String(Files.readAllBytes(p), StandardCharsets.UTF_8);
             } catch (IOException e) {
                 return null;
             }
         }).onWithAck(main, "files:update", String[].class, args -> {
             try {
                 if (args.length < 1) return null;
-                var p = Paths.get(".", args[0]);
+                Path p = Paths.get(".", args[0]);
                 if (!p.startsWith(root) || Files.isHidden(p)) return false;
                 if (args.length == 1) {
                     if (!Files.exists(p)) return true;
-                    Files.walkFileTree(p, new SimpleFileVisitor<>() {
+                    Files.walkFileTree(p, new SimpleFileVisitor<Path>() {
                         @Override
                         public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
                             Files.delete(file);
@@ -54,7 +54,7 @@ class FilesManager {
                         }
                     });
                 } else if (args[1] != null && Files.isRegularFile(p)) {
-                    Files.writeString(p, args[1]);
+                    Files.write(p, args[1].getBytes(StandardCharsets.UTF_8));
                 } else return false;
                 return true;
             } catch (IOException e) {
